feat: first implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "rootDir": "./src",
     "sourceMap": true,
     "strictNullChecks": true,
-    "target": "ES2019"
+    "target": "ES2019",
+    // alfalfa package is doing wrong type importing
+    "skipLibCheck": true,
   },
   "include": [
     "src/**/*"
