--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-typescript-boilerplate",
+  "name": "shelly-driver",
   "version": "0.0.0",
-  "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
+  "description": "Allterco Shelly devices driver",
   "author": "Javier Mendiara Cañardo <jmendiara@gmail.com>",
   "license": "Apache-2.0",
   "scripts": {
@@ -9,7 +9,7 @@
     "clean": "rm -fR lib && rm -fR *.tsbuildinfo",
     "prebuild": "npm run clean",
     "build": "tsc -p tsconfig.json",
-    "watch": "tsc -w -p tsconfig.json",
+    "watch": "NODE_ENV=development DEBUG=shelly:* tsc-watch --build tsconfig.json --onSuccess 'node ./lib/examples/temp.js'",
     "lint": "eslint .",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -26,8 +26,10 @@
     "boilerplate": "./bin/boilerplate"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.2",
+    "@types/qs": "^6.9.5",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
@@ -36,8 +38,17 @@
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
+    "tsc-watch": "^4.2.9",
     "tsutils": "^3.17.0",
     "typescript": "^4.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.21.0",
+    "coiot-coap": "^1.0.0",
+    "debug": "^4.3.1",
+    "lru-pcache": "^1.1.1",
+    "oropel": "^0.1.0",
+    "qs": "^6.9.4",
+    "rxjs": "^6.6.3"
+  }
 }
