--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "boilerplate": "./bin/boilerplate"
   },
   "devDependencies": {
+    "@types/bonjour": "^3.5.8",
     "@types/debug": "^4.1.5",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.2",
@@ -44,6 +45,8 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "axios-debug-log": "^0.8.2",
+    "bonjour": "^3.5.0",
     "coiot-coap": "^1.0.0",
     "debug": "^4.3.1",
     "lru-pcache": "^1.1.1",
