--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bonjour": "^3.5.8",
     "@types/debug": "^4.1.5",
     "@types/jest": "^26.0.19",
+    "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.2",
     "@types/qs": "^6.9.5",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
@@ -49,6 +50,7 @@
     "bonjour": "^3.5.0",
     "coiot-coap": "^1.0.0",
     "debug": "^4.3.1",
+    "lodash": "^4.17.20",
     "lru-pcache": "^1.1.1",
     "oropel": "^0.1.1",
     "qs": "^6.9.4",
